# python-service-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
config/: app.toml  pipeline.yaml
scripts/: rename_template.py  rename_template.sh
src/python_service_template/: cli.py  config.py  logging.py  pipeline.py  service.py  settings.py
tests/: test_cli.py  test_config.py  test_logging.py  test_pipeline.py  test_rename_template.py  test_service.py  test_settings.py
